kubernetes/manifests/tgtg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tgtg
  namespace: default
  labels:
    app: tgtg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tgtg
  template:
    metadata:
      labels:
        app: tgtg
    spec:
      containers:
      - name: tgtg
        image: jjtimmons/tgtg:latest
