kubernetes/manifests/headlamp.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/headlamp"
            backend:
              service:
                name: headlamp
                port:
                  number: 80
